--- a/user-onboarding/package.json
+++ b/user-onboarding/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "yum": "^0.1.1"
+    "yum": "^0.1.1",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
